--- a/slides/pdfs/shallow.tex
+++ b/slides/pdfs/shallow.tex
@@ -1,4 +1,4 @@
-% Created 2023-10-23 Mon 23:00
+% Created 2023-10-23 Mon 23:10
 % Intended LaTeX compiler: pdflatex
 \documentclass[presentation,smaller]{beamer}
 \usepackage[utf8]{inputenc}
@@ -20,16 +20,16 @@
 
 
 \section*{SHALLOW PART}
-\label{sec:org8373cf6}
+\label{sec:org6e630e5}
 
-\begin{frame}[label={sec:orgd2983e0}]{Challenges of Physics-Based Approaches}
+\begin{frame}[label={sec:org720ff71}]{Challenges of Physics-Based Approaches}
 \begin{itemize}
 \item \alert{\alert{Computational Intensity}}: Demanding molecular dynamics simulations.
 \item \alert{\alert{Incomplete Modeling}}: Often neglects complex environmental interactions.
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org45a2c8d}]{Nature's Blueprint}
+\begin{frame}[label={sec:orgcc15d1e}]{Nature's Blueprint}
 \begin{itemize}
 \item \alert{\alert{Evolutionary optimization}}: Natural proteins are optimized to the physical
 diffusion limits.
@@ -44,15 +44,15 @@ diffusion limits.
 \end{frame}
 
 \section*{MSA now}
-\label{sec:org8cd3381}
+\label{sec:org68ae961}
 
-\begin{frame}[label={sec:orgdabadae}]{How to extract these fined-tuend proteins, and what to do?}
+\begin{frame}[label={sec:orga973ce2}]{How to extract these fined-tuned proteins, and what to do?}
 \begin{center}
 \Large \textbf{Given a target natural function, search for natural counterparts}
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org91b69ee}]{Typical approach}
+\begin{frame}[label={sec:org42f1aae}]{Typical approach}
 \begin{center}
 \Large
 \begin{enumerate}
@@ -63,7 +63,7 @@ diffusion limits.
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org9d42c83}]{Multiple Sequence Alignments (MSAs) - the data}
+\begin{frame}[label={sec:org1f32ba4}]{Multiple Sequence Alignments (MSAs) - the data}
 \begin{itemize}
 \item Definition: Aligning multiple sequences to identify regions of similarity.
 \item Importance in bioinformatics:
@@ -80,7 +80,7 @@ diffusion limits.
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org84684a9}]{Multiple Sequence Alignments (MSAs) - the data}
+\begin{frame}[label={sec:orgdf65409}]{Multiple Sequence Alignments (MSAs) - the data}
 \begin{columns}
 \begin{column}{0.6\columnwidth}
 \begin{itemize}
@@ -109,7 +109,7 @@ diffusion limits.
 \end{columns}
 \end{frame}
 
-\begin{frame}[label={sec:orgc02bc99}]{Encoding MSAs for numerical use}
+\begin{frame}[label={sec:org8912148}]{Encoding MSAs for numerical use}
 \begin{itemize}
 \item MSA is discrete qualitative data type
 \end{itemize}
@@ -138,15 +138,15 @@ W \rightarrow \begin{pmatrix} 0\\ 0\\ \dots \\ 0\\ 1 \end{pmatrix}.
 \end{block}
 \end{frame}
 
-\begin{frame}[label={sec:org197a352}]{Let's look at the distribution of sequences}
+\begin{frame}[label={sec:orgce1e4b4}]{Let's look at the distribution of sequences}
 \begin{center}
 \Large \textbf{Since we have numerical data, we can also use dimensionality reduction techniques}
 \end{center}
 \end{frame}
 
 \section*{Visualization}
-\label{sec:org7c93b1f}
-\begin{frame}[label={sec:orgfde59d5}]{Singular Value Decomposition (SVD) for Protein Data}
+\label{sec:orgf3933aa}
+\begin{frame}[label={sec:org425c4a9}]{Singular Value Decomposition (SVD) for Protein Data}
 \begin{columns}
 \begin{column}{0.6\columnwidth}
 \begin{itemize}
@@ -166,7 +166,7 @@ W \rightarrow \begin{pmatrix} 0\\ 0\\ \dots \\ 0\\ 1 \end{pmatrix}.
 \end{columns}
 \end{frame}
 
-\begin{frame}[label={sec:orgef59855}]{Mathematics behind SVD}
+\begin{frame}[label={sec:orgcbbabb5}]{Mathematics behind SVD}
 \begin{block}{Introduction}
 \begin{itemize}
 \item Fundamental technique in linear algebra.
@@ -189,7 +189,7 @@ Where:
 \end{block}
 \end{frame}
 
-\begin{frame}[label={sec:org970da9f}]{What's in those singular vectors ?}
+\begin{frame}[label={sec:orgbb96490}]{What's in those singular vectors ?}
 \alert{*}
 \begin{itemize}
 \item The right singular vectors correspond to compositional motifs (in terms of
@@ -203,13 +203,13 @@ sequences).
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org9d0e309}]{Sample compositional motifs}
+\begin{frame}[label={sec:org917b0f2}]{Sample compositional motifs}
 \begin{center}
 \Large \textbf{Sample the compositional motifs observed in the MSA to form novel sequences}
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:orge56b6f3}]{Sequence Generation using SVD}
+\begin{frame}[label={sec:orgdd91ed6}]{Sequence Generation using SVD}
 \begin{itemize}
 \item Concept of reverse mapping: Generating functional sequences from
 reduced-dimensional data.
@@ -232,8 +232,8 @@ Introduce a Gaussian blank noise to sample the PCs:
 \end{frame}
 
 \section*{DCA}
-\label{sec:orgaae71fa}
-\begin{frame}[label={sec:orgb0f234e}]{A pairwise model borrowed from statistical physics}
+\label{sec:org69d5a4d}
+\begin{frame}[label={sec:org2146d5a}]{A pairwise model borrowed from statistical physics}
 \begin{center}
 \Large \textbf{Direct coupling analysis}
 \end{center}
@@ -241,7 +241,7 @@ Introduce a Gaussian blank noise to sample the PCs:
 F. Morcos \emph{et al}, PNAS 2011
 \end{frame}
 
-\begin{frame}[label={sec:orgb55a935}]{Markov Random Field for Protein Analysis}
+\begin{frame}[label={sec:org0f561c0}]{Markov Random Field for Protein Analysis}
 \begin{itemize}
 \item Parametrize a probability distribution describing the distribution of sequences.
 \item Decompose the complex distribution of sequences into a pairwise potential ---
@@ -255,7 +255,7 @@ the Potts model.
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org17a6da8}]{Mathematics behind Random Markov Fields}
+\begin{frame}[label={sec:org64620c0}]{Mathematics behind Random Markov Fields}
 \begin{block}{MSA probabilistic model [Morcos \emph{et al}, PNAS, 2011]}
 \begin{itemize}
 \item Probability associated to a Sequence given a MSA:
@@ -279,14 +279,14 @@ P_{\mathcal{H}}(S) \propto \text{exp}\{-\beta \times \mathcal{H}(S)\}
 \end{block}
 \end{frame}
 
-\begin{frame}[label={sec:org68aa3de}]{Initial applications of DCA}
+\begin{frame}[label={sec:org3895c17}]{Initial applications of DCA}
 Contact predictions based on coupling terms \(J_{ij}\):
 \begin{equation*}
 F_{ij} &= \sqrt{\sum J_{ij}(A,B)^2} \;\;\; \rightarrow \;\;\; F^{APC}_{ij} &= F_{ij} - \frac{F_{i.}F_{.j}}{F_{..}}
 \end{equation*}
 \end{frame}
 
-\begin{frame}[label={sec:org5d7f7b8}]{DCA learning technique}
+\begin{frame}[label={sec:orgb9facad}]{DCA learning technique}
 \begin{block}{Turn into an optimization procedure}
 \begin{itemize}
 \item Fit low-order statistics such as \(f_i\) and \(f_{ij}\): Find \(\mathcal{H}\) such that:
@@ -309,7 +309,7 @@ h_i(A) \leftarrow h_i(A) + \eta (\hat{f}_{i}(A) - f_i(A))
 \end{block}
 \end{frame}
 
-\begin{frame}[label={sec:org3696fe2}]{Sequence Generation using Random Markov Field}
+\begin{frame}[label={sec:org09a1801}]{Sequence Generation using Random Markov Field}
 \begin{itemize}
 \item Sampling sequences: sampling new protein variants.
 \item Ensuring biological relevance: Satisfying coevolutionary constraints.
